# anki-translator

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  docker-compose.yml  plan.txt
.claude/: settings.json
anki-addon/: __init__.py  config.json  config.py  manifest.json  meta.json  sync.py
backend/: alembic.ini  create_user.py  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  main.py
backend/app/api/: auth.py  cards.py  decks.py  duplicates.py  ocr.py  sync.py  translate.py
backend/app/models/: __init__.py  base.py  card.py  deck.py  user.py
backend/app/schemas/: cards.py  decks.py  ocr.py  sync.py
backend/app/services/: duplicate_service.py  llm_service.py  sync_service.py
backend/tests/: conftest.py  test_anki_integration.py  test_auth.py  test_cards.py  test_duplicates.py  test_llm_service.py  test_ocr_translate.py  test_sync.py
frontend/: e2e-test.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: CameraPage.tsx  CardsPage.tsx  ConfigPage.tsx  LoginPage.tsx  TranslatePage.tsx  WordSelectPage.tsx
